# CustomStartup

./: .env-template  README.md  applications.py  config.py  main.py  pyproject.toml  requirements.txt  sites.py  startup.py
gui/: setup_profile.py
openers/: applications.py  apps.py  sites.py  startup.py
storage/: json_manager.py  profiles.py  user_startups.pickle
