[tool.poetry]
name = "customstartup"
version = "0.1.0"
description = ""
authors = ["Ethan Cloin <dev.ethancloin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
py2app = "^0.28.5"
click = "8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-isort = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
